# geocoding-api

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: Dockerfile
src/app/: config.py  database.py  models.py  providers.py  repositories.py  server.py  services.py  tasks.py
src/app/alembic/: env.py
src/app/alembic/versions/: 037bee517d10_.py  03ee08ef6ea7_.py  459bb558add8_.py  a157842e3a79_.py
src/app/api/v1/: routes.py  schemas.py
src/app/core/: config.py  database.py  logging.py  providers.py
src/app/core/di/: __init__.py  providers.py  setup.py
src/app/core/tkq/: broker.py  scheduler.py
src/app/repositories/: geodata.py
src/app/services/geodata/: client.py  service.py
src/tests/: conftest.py  test_repository.py  test_services.py
