[project]
name = "geocoding-task"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dishka>=1.6.0",
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.8",
    "sqlalchemy[asyncio]>=2.0.43",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]